fixed keyboard spacing

--- a/sepm-wordle/src/App.css
+++ b/sepm-wordle/src/App.css
@@ -80,7 +80,7 @@ nav h1 {
 .keyboard {
   width: 700px;
   height: 300px;
-  margin-top: 20px;
+  margin-top: 70px;
 }
 
 .firstLine {
@@ -89,7 +89,7 @@ nav h1 {
   flex-direction: row;
   display: flex;
   justify-content: center;
-  margin: 5px;
+  margin: 2px;
 }
 
 .secondLine {
@@ -97,7 +97,7 @@ nav h1 {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin: 5px;
+  margin: 2px;
 }
 
 .thirdLine {
@@ -105,7 +105,7 @@ nav h1 {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin: 5px;
+  margin: 2px;
 }
 
 .key {
@@ -115,7 +115,7 @@ nav h1 {
   border-radius: 5px;
   display: grid;
   place-items: center;
-  font-size: 15px;
+  font-size: 17px;
   background-color: grey;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
